# YouTubeUploader

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: login.py  upload.py
